--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "request-promise-json": "^1.0.4"
+    "request-promise-json": "^1.0.4",
+    "typeorm": "^0.2.14"
   }
 }
