--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "apollo-server-koa": "^1.4.0",
     "babel-core": "^6.26.3",
     "babel-preset-esnext": "^1.1.3",
-    "apollo-server-koa": "^1.4.0",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "mysql2": "^1.6.5",
+    "pg": "^7.8.1",
+    "pg-hstore": "^2.3.2",
     "request-promise-json": "^1.0.4",
+    "sequelize": "^4.43.0",
+    "sqlite3": "^4.0.6",
+    "tedious": "^5.0.3",
     "typeorm": "^0.2.14"
   }
 }
