--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "apollo-boost": "^0.3.1",
     "apollo-server-koa": "^1.4.0",
     "babel-core": "^6.26.3",
     "babel-preset-esnext": "^1.1.3",
@@ -23,8 +24,10 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "mysql2": "^1.6.5",
+    "node-fetch": "^2.3.0",
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
+    "react-apollo": "^2.5.2",
     "request-promise-json": "^1.0.4",
     "sequelize": "^4.43.0",
     "sqlite3": "^4.0.6",
