--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
+    "@koa/cors": "^2.2.3",
     "apollo-server-koa": "^1.4.0",
+    "babel-core": "^6.26.3",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.4",
+    "kcors": "^2.2.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
